need to fix create maps and do rename maps

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -188,6 +188,11 @@ html {
     margin-right: 42.5%;
 }
 
+.modal-header-div2 {
+    margin: auto;
+    margin-right: 39%;
+}
+
 .signup-modal {
     display: block;
     width: 750px;
@@ -236,7 +241,7 @@ html {
 }
 
 .delete-modal {
-    width: fit-content;
+    width: 750px;
 }
 
 .col-spacer {
