working on spreadsheet screen now

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -193,6 +193,11 @@ html {
     margin-right: 39%;
 }
 
+.modal-header-div3 {
+    margin: auto;
+    margin-right: 37%;
+}
+
 .signup-modal {
     display: block;
     width: 750px;
