--- a/client/src/css/regionspreadsheet.css
+++ b/client/src/css/regionspreadsheet.css
@@ -156,7 +156,9 @@
 
 .itemsSpreadsheet {
     overflow-y: auto;
-    height: 100%;
+    height: 93%;
+    background-color: #c4c4c4;
+    overflow-x: hidden;
 }
 
 .regionItemSpreadsheet {
@@ -165,23 +167,37 @@
 }
 
 .regionItemCloseIconSpreadsheet{
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding-top: 0.7%;
+
+}
+
+.regionItemCloseIconSpreadsheet:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.regionItemCloseIconSpreadsheet1{
     transform: scale(1.7);
     color: #d02f2f;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 1%;
-    border-style: solid;
-
 }
 
 .regionItemNameSpreadsheet {
     font-size: 24px;
-    color: black;
+    color: #4f8bb8;
     margin-left: 1%;
-    padding-top: 0.3%;
-    padding-left: 5.5%;
-    padding-right: 6.5%;
-    border-style: solid;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 7%;
+    padding-right: 8%;
+    border-bottom: solid black;
+    border-left: solid black;
+    border-right: solid black;
+    margin: auto;
+    width: 100%;
 }
 
 .regionItemNameSpreadsheet:hover {
@@ -191,9 +207,14 @@
 .regionItemCapitalSpreadsheet {
     font-size: 24px;
     color: black;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 7%;
+    padding-right: 7%;
+    border-bottom: solid;
+    border-right: solid;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
 }
 
 .regionItemCapitalSpreadsheet:hover {
@@ -203,23 +224,50 @@
 .regionItemLeaderSpreadsheet{
     font-size: 24px;
     color: black;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 7%;
+    padding-right: 7%;
+    border-bottom: solid;
+    border-right: solid;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+}
+
+.regionItemLeaderSpreadsheet:hover {
+    background-color: lightgray;
 }
 
 .regionItemFlagSpreadsheet{
     font-size: 24px;
     color: black;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 7%;
+    padding-right: 7%;
+    border-bottom: solid;
+    border-right: solid;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+}
+
+.regionItemFlagSpreadsheet:hover {
+    background-color: lightgray;
 }
 
 .regionItemLandmarksSpreadsheet{
     font-size: 24px;
-    color: black;
+    color: #4f8bb8;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 10.6%;
+    padding-right: 10.6%;
+    border-bottom: solid black;
+    border-right: solid black;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+}
+
+.regionItemLandmarksSpreadsheet:hover{
+    background-color: lightgray;
 }
