--- a/client/src/css/regionspreadsheet.css
+++ b/client/src/css/regionspreadsheet.css
@@ -66,7 +66,7 @@
 }
 
 .currentRegionNameSpreadsheet:hover {
-    cursor: pointer;
+   
 }
 
 .spreadsheetOverall {
@@ -201,6 +201,7 @@
 }
 
 .regionItemNameSpreadsheet:hover {
+    cursor: pointer;
     background-color: lightgray;
 }
 
@@ -266,8 +267,10 @@
     border-right: solid black;
     margin: auto;
     width: 100%;
+    height: 100%;
 }
 
 .regionItemLandmarksSpreadsheet:hover{
+    cursor: pointer;
     background-color: lightgray;
 }
