--- a/client/src/css/regionspreadsheet.css
+++ b/client/src/css/regionspreadsheet.css
@@ -95,6 +95,7 @@
     background-color: #d02f2f;
     padding-top: 0.5%;
     padding-bottom: 0.5%;
+    padding-left: 4%;
 }
 
 .headerNameSpreadsheet{
@@ -102,9 +103,9 @@
     font-weight: bold;
     color: white;
     margin: auto;
-    margin-left: 3.5%;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .headerNameSpreadsheet:hover {
@@ -117,8 +118,9 @@
     font-weight: bold;
     color: white;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .headerCapitalSpreadsheet:hover {
@@ -131,8 +133,9 @@
     font-weight: bold;
     color: white;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .headerLeaderSpreadsheet:hover {
@@ -145,8 +148,9 @@
     font-weight: bold;
     color: white;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .headerFlagSpreadsheet:hover {
@@ -159,8 +163,9 @@
     font-weight: bold;
     color: white;
     margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .headerLandmarksSpreadsheet:hover {
@@ -182,7 +187,7 @@
 
 .regionItemCloseIconSpreadsheet{
     height: 100%;
-    width: 100%;
+    width: 20%;
     margin: auto;
     text-align: center;
     padding-top: 0.7%;
@@ -202,16 +207,15 @@
 .regionItemNameSpreadsheet {
     font-size: 24px;
     color: #4f8bb8;
-    margin-left: 1%;
-    padding-top: 0.4%;
-    padding-bottom: 0.4%;
-    padding-left: 7%;
-    padding-right: 8%;
     border-bottom: solid black;
     border-left: solid black;
     border-right: solid black;
-    margin: auto;
     width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+    justify-content: center;
+    padding-top: 0.3%;
 }
 
 .regionItemNameSpreadsheet:hover {
@@ -219,51 +223,86 @@
     background-color: lightgray;
 }
 
+.regionItemNameSpreadsheet1{
+    font-size: 24px;
+    border-bottom: solid black;
+    border-left: solid black;
+    border-right: solid black;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+}
+
 .regionItemCapitalSpreadsheet {
     font-size: 24px;
     color: black;
-    padding-top: 0.4%;
-    padding-bottom: 0.4%;
-    padding-left: 7%;
-    padding-right: 7%;
     border-bottom: solid;
     border-right: solid;
     margin: auto;
     width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+    padding-top: 0.3%;
 }
 
 .regionItemCapitalSpreadsheet:hover {
     background-color: lightgray;
 }
 
+.regionItemCapitalSpreadsheet1{
+    font-size: 24px;
+    border-bottom: solid black;
+    border-left: solid black;
+    border-right: solid black;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+}
+
 .regionItemLeaderSpreadsheet{
     font-size: 24px;
     color: black;
-    padding-top: 0.4%;
-    padding-bottom: 0.4%;
-    padding-left: 7%;
-    padding-right: 7%;
     border-bottom: solid;
     border-right: solid;
     margin: auto;
     width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+    padding-top: 0.3%;
 }
 
 .regionItemLeaderSpreadsheet:hover {
     background-color: lightgray;
 }
 
+.regionItemLeaderSpreadsheet1{
+    font-size: 24px;
+    border-bottom: solid black;
+    border-left: solid black;
+    border-right: solid black;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    text-align: center;
+}
+
 .regionItemFlagSpreadsheet{
     font-size: 24px;
     color: black;
-    padding-top: 0.4%;
-    padding-bottom: 0.4%;
-    padding-left: 7%;
-    padding-right: 7%;
     border-bottom: solid;
     border-right: solid;
     margin: auto;
     width: 100%;
+    text-align: center;
+    height: 100%;
+    padding-top: 0.3%;
 }
 
 .regionItemFlagSpreadsheet:hover {
@@ -273,15 +312,15 @@
 .regionItemLandmarksSpreadsheet{
     font-size: 24px;
     color: #4f8bb8;
-    padding-top: 0.4%;
-    padding-bottom: 0.4%;
-    padding-left: 10.6%;
-    padding-right: 10.6%;
     border-bottom: solid black;
     border-right: solid black;
     margin: auto;
     width: 100%;
     height: 100%;
+    overflow-x: auto;
+    text-align: center;
+    padding-top: 0.3%;
+
 }
 
 .regionItemLandmarksSpreadsheet:hover{
