--- a/client/src/css/regionviewer.css
+++ b/client/src/css/regionviewer.css
@@ -8,6 +8,33 @@
     overflow-x: auto;
 }
 
+.navSiblings {
+    position: absolute;
+    top: 2.5%;
+    left: 45%;
+    width: 100%;
+}
+
+.prevSibling {
+    transform: scale(1.7);
+    color: white;
+    margin-left: 5%;
+}
+
+.prevSibling:hover {
+    cursor: pointer;
+}
+
+.nextSibling {
+    transform: scale(1.7);
+    color: white;
+    margin-left: 2%;
+}
+
+.nextSibling:hover {
+    cursor: pointer;
+}
+
 .navbarClickDiv:hover {
     cursor: pointer;
 }
@@ -24,12 +51,13 @@
 }
 
 .undoRedoViewer{
-
+    margin-top: 4%;
+    margin-left: 13%;
 }
 
 .undoArrowViewer{
-    margin-top: 4%;
-    margin-left: 13%;
+    /* margin-top: 4%;
+    margin-left: 13%; */
     transform: scale(1.7);
     color: white;
     font-size: 24px;
@@ -41,7 +69,7 @@
 
 .redoArrowViewer{
     margin-left: 4%;
-    margin-top: 4%;
+    /* margin-top: 4%; */
     transform: scale(1.7);
     color: white;
     font-size: 24px;
@@ -87,6 +115,21 @@
 
 .clickParentViewer:hover {
     cursor: pointer;
+}
+
+.editParentRegionViewer{
+    transform: scale(1.3);
+    color: #cea449;
+    margin-left: 2%;
+    margin-top: 0.7%;
+}
+
+.editParentRegionViewer:hover{
+    cursor: pointer;
+}
+
+.editingParentRegionViewer{
+    margin-left: 2%;
 }
 
 .regionCapitalViewer{
