--- a/client/src/css/spreadsheetitems.css
+++ b/client/src/css/spreadsheetitems.css
@@ -127,6 +127,20 @@
     background-color: lightgray;
 }
 
+.regionItemFlagSpreadsheet1{
+    font-size: 24px;
+    border-bottom: solid;
+    border-right: solid;
+    margin: auto;
+    width: 40%;
+    padding-left: 7%;
+    padding-right: 7%;
+    text-align: center;
+    height: 100%;
+    padding-top: 0.3%;
+    padding-bottom: 0.3%;
+}
+
 .regionItemLandmarksSpreadsheet{
     font-size: 24px;
     color: #4f8bb8;
